Saving test results

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,5 +17,11 @@ jobs:
     steps:
       - checkout
       - run: gradle clean test
+      - run:
+          name: save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
+          when: always
       - store_test_results:
-          path: test-results
+          path: ~/junit
