--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,5 @@ jobs:
           when: always
       - store_test_results:
           path: ~/junit
+      - store_artifacts:
+          path: ~/junit
