--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,3 +27,8 @@ jobs:
           path: ~/junit
       - store_artifacts:
           path: ~/junit
+      - run:
+          name: gather coverage statistics
+          command: |
+            ./gradlew jacocoTestReport
+            bash <(curl -s https://codecov.io/bash)
