--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,5 @@ jobs:
       - run:
           name: gather coverage statistics
           command: |
-            ./gradlew jacocoTestReport
+            if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
             bash <(curl -s https://codecov.io/bash)
