--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,33 @@
-allprojects {
-	repositories {
-		jcenter()
-	}
+plugins {
+	id 'org.springframework.boot' version '2.1.4.RELEASE'
 }
 
 subprojects {
-	version = '1.0'
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'jacoco'
+
+	repositories {
+		mavenCentral()
+	}
+
+	dependencies {
+		compile 'org.springframework.boot:spring-boot-starter-web'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	}
+
+	sourceCompatibility = '1.8'
+
+	jacocoTestReport {
+		reports {
+			//noinspection GroovyAssignabilityCheck
+            xml.enabled true
+            //noinspection GroovyAssignabilityCheck
+			html.enabled false
+		}
+	}
+
+	group = 'io.mart'
+	version = '1.0-SNAPSHOT'
 }
