--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ pluginManagement {
 		gradlePluginPortal()
 	}
 }
-rootProject.name = 'worktrack'
+rootProject.name = 'teacher-review'
 
 include 'analytics'
 include 'core'
